--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FaceCook</string>
+    <string name="activity_recetas_name">Mis Recetas</string>
 </resources>
