Añadida Actividad para Guardar Recetas
Añadido todo en la actividad, solo falta añadir la creación de Pdf y la insercción en la base de datos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">FaceCook</string>
     <string name="activity_recetas_name">Mis Recetas</string>
+    <string name="activity_agregar_receta_name">Añadir Recetas</string>
 </resources>
